[gd_scene load_steps=2 format=3 uid="uid://cp0ob2ul8hv0n"]

[ext_resource type="Script" path="res://src/header_popup.gd" id="1_bfvn8"]

[node name="HeaderPopup" type="Window"]
title = "fgchv"
initial_position = 2
size = Vector2i(400, 335)
wrap_controls = true
exclusive = true
script = ExtResource("1_bfvn8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="HeadPropertyControlContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="AddPropertyButton" type="Button" parent="VBoxContainer/HeadPropertyControlContainer"]
layout_mode = 2
focus_mode = 0
text = "add"

[node name="SaveButton" type="Button" parent="VBoxContainer/HeadPropertyControlContainer"]
layout_mode = 2
focus_mode = 0
text = "save"

[node name="SaveCloseButton" type="Button" parent="VBoxContainer/HeadPropertyControlContainer"]
layout_mode = 2
focus_mode = 0
text = "save&close"

[node name="HeadPropertyContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="VBoxContainer/HeadPropertyControlContainer/AddPropertyButton" to="." method="_on_add_property_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HeadPropertyControlContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HeadPropertyControlContainer/SaveCloseButton" to="." method="_on_save_close_button_pressed"]
